# nc2na

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
nc2na/: convert_nc_2_na_GUI.py
nc2na/na_lib/: na1001.py
