[tool.poetry]
name = "nc2na"
version = "0.0.4"
description = "convert netCDF to NA"
authors = ["Florian Obersteiner <f.obersteiner@posteo.de>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9, < 3.13"
netcdf4 = ">= 1.6"
numpy = ">= 1.18"
xarray = ">= 2022, >= 2023, >= 2024"

[tool.poetry.dev-dependencies]
pyinstaller = ">= 6.0"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
lint.ignore = ["E501"]
lint.extend-select = ["C4", "SIM"]
target-version = "py39"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
